// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default,#000000);
  border-radius: 6px;
  box-shadow: 0 1px 3px 0px rgba(0,0,0,0.05);
  color: var(--bb-palette-defaultInverted,#000000);
  fill: var(--bb-palette-defaultInverted,#000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900,#000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200,#000000) 0px 0px 0px 1px, var(--bb-palette-gray100,#000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800,#000000);
}

.emotion-3 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10 {
  color: var(--bb-palette-primary,#000000) !important;
}

<div
  class="emotion-7 emotion-1 emotion-10 test bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-4 emotion-1 emotion-2 emotion-7 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-0 emotion-1 emotion-2 emotion-3 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`overrides DropdownMenu.Button.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default,#000000);
  border-radius: 6px;
  box-shadow: 0 1px 3px 0px rgba(0,0,0,0.05);
  color: var(--bb-palette-defaultInverted,#000000);
  fill: var(--bb-palette-defaultInverted,#000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900,#000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200,#000000) 0px 0px 0px 1px, var(--bb-palette-gray100,#000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800,#000000);
}

.emotion-3 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-7 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-8 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-4 emotion-1 emotion-2 emotion-7 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-0 emotion-1 emotion-2 emotion-3 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`overrides DropdownMenu.Divider.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default,#000000);
  border-radius: 6px;
  box-shadow: 0 1px 3px 0px rgba(0,0,0,0.05);
  color: var(--bb-palette-defaultInverted,#000000);
  fill: var(--bb-palette-defaultInverted,#000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900,#000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200,#000000) 0px 0px 0px 1px, var(--bb-palette-gray100,#000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800,#000000);
}

.emotion-3 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-7 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-4 emotion-1 emotion-2 emotion-7 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-0 emotion-1 emotion-2 emotion-3 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`overrides DropdownMenu.Group.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default,#000000);
  border-radius: 6px;
  box-shadow: 0 1px 3px 0px rgba(0,0,0,0.05);
  color: var(--bb-palette-defaultInverted,#000000);
  fill: var(--bb-palette-defaultInverted,#000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900,#000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200,#000000) 0px 0px 0px 1px, var(--bb-palette-gray100,#000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800,#000000);
}

.emotion-3 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-7 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-4 emotion-1 emotion-2 emotion-7 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-0 emotion-1 emotion-2 emotion-3 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`overrides DropdownMenu.Item.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default,#000000);
  border-radius: 6px;
  box-shadow: 0 1px 3px 0px rgba(0,0,0,0.05);
  color: var(--bb-palette-defaultInverted,#000000);
  fill: var(--bb-palette-defaultInverted,#000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900,#000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200,#000000) 0px 0px 0px 1px, var(--bb-palette-gray100,#000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800,#000000);
}

.emotion-3 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-7 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-4 emotion-1 emotion-2 emotion-7 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-0 emotion-1 emotion-2 emotion-3 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`overrides DropdownMenu.Popover.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default,#000000);
  border-radius: 6px;
  box-shadow: 0 1px 3px 0px rgba(0,0,0,0.05);
  color: var(--bb-palette-defaultInverted,#000000);
  fill: var(--bb-palette-defaultInverted,#000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900,#000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200,#000000) 0px 0px 0px 1px, var(--bb-palette-gray100,#000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800,#000000);
}

.emotion-3 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-7 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-4 emotion-1 emotion-2 emotion-7 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-0 emotion-1 emotion-2 emotion-3 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`overrides DropdownMenu.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default,#000000);
  border-radius: 6px;
  box-shadow: 0 1px 3px 0px rgba(0,0,0,0.05);
  color: var(--bb-palette-defaultInverted,#000000);
  fill: var(--bb-palette-defaultInverted,#000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900,#000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200,#000000) 0px 0px 0px 1px, var(--bb-palette-gray100,#000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800,#000000);
}

.emotion-3 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-8 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-8 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-4 emotion-1 emotion-2 emotion-7 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-0 emotion-1 emotion-2 emotion-3 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default,#000000);
  border-radius: 6px;
  box-shadow: 0 1px 3px 0px rgba(0,0,0,0.05);
  color: var(--bb-palette-defaultInverted,#000000);
  fill: var(--bb-palette-defaultInverted,#000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900,#000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200,#000000) 0px 0px 0px 1px, var(--bb-palette-gray100,#000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800,#000000);
}

.emotion-3 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-39 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
}

.emotion-36 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-37 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-37[hidden] {
  display: inherit !important;
  visibility: hidden !important;
}

.emotion-37:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200,#000000) 0px 0px 0px 3px;
}

.emotion-12 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-12 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-12:hover {
  color: unset;
  fill: unset;
}

.emotion-12[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-12:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-12:not(:disabled):hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-12:not(:disabled):focus:active,
.emotion-12:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700,#000000);
}

.emotion-12 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-11 {
  margin-right: 0.5rem;
}

.emotion-35 {
  color: var(--bb-palette-danger,#000000) !important;
}

<div
  class="emotion-7 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="true"
    aria-haspopup="menu"
    class="emotion-4 emotion-1 emotion-2 emotion-7 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-0 emotion-1 emotion-2 emotion-3 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
  <div
    aria-orientation="vertical"
    class="emotion-36 emotion-37 emotion-1 emotion-39 bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    id="test"
    role="menu"
    tabindex="-1"
  >
    <div
      class="emotion-12 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem"
      id="test-1"
      role="menuitem"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="emotion-0 emotion-1 emotion-2 emotion-11 bb-DropdownMenuItemIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Edit
    </div>
    <div
      class="emotion-12 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem"
      id="test-2"
      role="menuitem"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class="emotion-0 emotion-1 emotion-2 emotion-11 bb-DropdownMenuItemIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Share
    </div>
    <div
      class="emotion-12 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem"
      id="test-3"
      role="menuitem"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class="emotion-0 emotion-1 emotion-2 emotion-11 bb-DropdownMenuItemIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Rename
    </div>
    <div
      class="emotion-12 emotion-1 emotion-35 bb-Box bb-DropdownMenuItem"
      id="test-4"
      role="menuitem"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class="emotion-0 emotion-1 emotion-2 emotion-11 bb-DropdownMenuItemIcon bb-Box bb-Icon"
        role="img"
        viewBox="0 0 0 0"
      />
      Delete
    </div>
  </div>
</div>
`;

exports[`props should render correctly for CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default,#000000);
  border-radius: 6px;
  box-shadow: 0 1px 3px 0px rgba(0,0,0,0.05);
  color: var(--bb-palette-defaultInverted,#000000);
  fill: var(--bb-palette-defaultInverted,#000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900,#000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200,#000000) 0px 0px 0px 1px, var(--bb-palette-gray100,#000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800,#000000);
}

.emotion-3 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10 {
  background-color: var(--bb-palette-red,#ff0000) !important;
}

<div
  class="emotion-7 emotion-1 emotion-10 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-4 emotion-1 emotion-2 emotion-7 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-0 emotion-1 emotion-2 emotion-3 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`props should render correctly for a controlled option group 1`] = `null`;

exports[`props should render correctly for an invisible dropdown menu 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default,#000000);
  border-radius: 6px;
  box-shadow: 0 1px 3px 0px rgba(0,0,0,0.05);
  color: var(--bb-palette-defaultInverted,#000000);
  fill: var(--bb-palette-defaultInverted,#000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900,#000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200,#000000) 0px 0px 0px 1px, var(--bb-palette-gray100,#000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800,#000000);
}

.emotion-3 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-7 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-4 emotion-1 emotion-2 emotion-7 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-0 emotion-1 emotion-2 emotion-3 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`props should render correctly for an uncontrolled option group 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default,#000000);
  border-radius: 6px;
  box-shadow: 0 1px 3px 0px rgba(0,0,0,0.05);
  color: var(--bb-palette-defaultInverted,#000000);
  fill: var(--bb-palette-defaultInverted,#000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900,#000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200,#000000) 0px 0px 0px 1px, var(--bb-palette-gray100,#000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800,#000000);
}

.emotion-3 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-69 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
}

.emotion-66 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-67 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-67[hidden] {
  display: inherit !important;
  visibility: hidden !important;
}

.emotion-67:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200,#000000) 0px 0px 0px 3px;
}

.emotion-18 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-18 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-18:hover {
  color: unset;
  fill: unset;
}

.emotion-18[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-18:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-18:not(:disabled):hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-18:not(:disabled):focus:active,
.emotion-18:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700,#000000);
}

.emotion-18 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-29 + .emotion-29 {
  margin-top: 1rem;
}

.emotion-10 {
  color: var(--bb-palette-text100,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  padding: 0.5rem 1rem;
  padding-top: 0.25rem;
  text-transform: uppercase;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-17[aria-checked="true"] {
  color: var(--bb-palette-primary,#000000);
}

.emotion-16 {
  margin-right: 0.5rem;
  width: 16px;
}

<div
  class="emotion-7 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="true"
    aria-haspopup="menu"
    class="emotion-4 emotion-1 emotion-2 emotion-7 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-0 emotion-1 emotion-2 emotion-3 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
  <div
    aria-orientation="vertical"
    class="emotion-66 emotion-67 emotion-1 emotion-69 bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    id="test"
    role="menu"
    tabindex="-1"
  >
    <div
      aria-labelledby="id-test"
      class="emotion-28 emotion-29 emotion-1 emotion-2 bb-Box bb-DropdownMenuGroup bb-DropdownMenuOptionGroup"
      role="group"
    >
      <div
        class="emotion-1 emotion-2 emotion-10 bb-Box bb-DropdownMenuGroupTitle"
        id="id-test"
      >
        Sort by
      </div>
      <div
        aria-checked="true"
        class="emotion-17 emotion-18 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem bb-DropdownMenuOptionItem"
        id="test-1"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="emotion-1 emotion-2 emotion-16 bb-DropdownMenuOptionItemIconWrapper bb-Box"
        >
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1 emotion-2 bb-Box bb-Icon"
            role="img"
            viewBox="0 0 16 16"
          >
            <path
              d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        Ascending
      </div>
      <div
        aria-checked="false"
        class="emotion-17 emotion-18 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem bb-DropdownMenuOptionItem"
        id="test-2"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="emotion-1 emotion-2 emotion-16 bb-DropdownMenuOptionItemIconWrapper bb-Box"
        />
        Descending
      </div>
    </div>
    <div
      aria-labelledby="id-test"
      class="emotion-28 emotion-29 emotion-1 emotion-2 bb-Box bb-DropdownMenuGroup bb-DropdownMenuOptionGroup"
      role="group"
    >
      <div
        class="emotion-1 emotion-2 emotion-10 bb-Box bb-DropdownMenuGroupTitle"
        id="id-test"
      >
        Countries
      </div>
      <div
        aria-checked="true"
        class="emotion-17 emotion-18 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem bb-DropdownMenuOptionItem"
        id="test-3"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="emotion-1 emotion-2 emotion-16 bb-DropdownMenuOptionItemIconWrapper bb-Box"
        >
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1 emotion-2 bb-Box bb-Icon"
            role="img"
            viewBox="0 0 16 16"
          >
            <path
              d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        Australia
      </div>
      <div
        aria-checked="false"
        class="emotion-17 emotion-18 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem bb-DropdownMenuOptionItem"
        id="test-4"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="emotion-1 emotion-2 emotion-16 bb-DropdownMenuOptionItemIconWrapper bb-Box"
        />
        United States
      </div>
      <div
        aria-checked="true"
        class="emotion-17 emotion-18 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem bb-DropdownMenuOptionItem"
        id="test-5"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="emotion-1 emotion-2 emotion-16 bb-DropdownMenuOptionItemIconWrapper bb-Box"
        >
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1 emotion-2 bb-Box bb-Icon"
            role="img"
            viewBox="0 0 16 16"
          >
            <path
              d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        India
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with groups 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default,#000000);
  border-radius: 6px;
  box-shadow: 0 1px 3px 0px rgba(0,0,0,0.05);
  color: var(--bb-palette-defaultInverted,#000000);
  fill: var(--bb-palette-defaultInverted,#000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900,#000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200,#000000) 0px 0px 0px 1px, var(--bb-palette-gray100,#000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800,#000000);
}

.emotion-3 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-58 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
}

.emotion-55 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  width: 100%;
  padding: 0.5rem 0;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-56 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-56[hidden] {
  display: inherit !important;
  visibility: hidden !important;
}

.emotion-56:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200,#000000) 0px 0px 0px 3px;
}

.emotion-15 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-15 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-15:hover {
  color: unset;
  fill: unset;
}

.emotion-15[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-15:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-15:not(:disabled):hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-15:not(:disabled):focus:active,
.emotion-15:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700,#000000);
}

.emotion-15 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-14 {
  margin-right: 0.5rem;
}

.emotion-38 {
  color: var(--bb-palette-danger,#000000) !important;
}

.emotion-39 + .emotion-39 {
  margin-top: 1rem;
}

.emotion-10 {
  color: var(--bb-palette-text100,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  padding: 0.5rem 1rem;
  padding-top: 0.25rem;
  text-transform: uppercase;
}

.emotion-43 {
  border: 1px solid var(--bb-palette-white800,#000000);
  border-width: 0 0 1px 0;
  padding: 0;
  width: auto;
  height: 0;
}

.emotion-43[aria-orientation="vertical"] {
  border-width: 0 1px 0 0;
  width: 0;
  height: auto;
}

.emotion-42.emotion-42 {
  margin: 0.5rem 0;
}

<div
  class="emotion-7 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="true"
    aria-haspopup="menu"
    class="emotion-4 emotion-1 emotion-2 emotion-7 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-0 emotion-1 emotion-2 emotion-3 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
  <div
    aria-orientation="vertical"
    class="emotion-55 emotion-56 emotion-1 emotion-58 bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    id="test"
    role="menu"
    tabindex="-1"
  >
    <div
      aria-labelledby="id-test"
      class="emotion-39 emotion-1 emotion-2 bb-Box bb-DropdownMenuGroup"
      role="group"
    >
      <div
        class="emotion-1 emotion-2 emotion-10 bb-Box bb-DropdownMenuGroupTitle"
        id="id-test"
      >
        Actions
      </div>
      <div
        class="emotion-15 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem"
        id="test-1"
        role="menuitem"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1 emotion-2 emotion-14 bb-DropdownMenuItemIcon bb-Box bb-Icon"
          role="img"
          viewBox="0 0 0 0"
        />
        Edit
      </div>
      <div
        class="emotion-15 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem"
        id="test-2"
        role="menuitem"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1 emotion-2 emotion-14 bb-DropdownMenuItemIcon bb-Box bb-Icon"
          role="img"
          viewBox="0 0 0 0"
        />
        Share
      </div>
      <div
        class="emotion-15 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem"
        id="test-3"
        role="menuitem"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1 emotion-2 emotion-14 bb-DropdownMenuItemIcon bb-Box bb-Icon"
          role="img"
          viewBox="0 0 0 0"
        />
        Rename
      </div>
      <div
        class="emotion-15 emotion-1 emotion-38 bb-Box bb-DropdownMenuItem"
        id="test-4"
        role="menuitem"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1 emotion-2 emotion-14 bb-DropdownMenuItemIcon bb-Box bb-Icon"
          role="img"
          viewBox="0 0 0 0"
        />
        Delete
      </div>
    </div>
    <div
      aria-orientation="horizontal"
      class="emotion-42 emotion-43 emotion-1 emotion-2 bb-Box bb-Divider bb-DropdownMenuDivider"
      role="separator"
    />
    <div
      aria-labelledby="id-test"
      class="emotion-39 emotion-1 emotion-2 bb-Box bb-DropdownMenuGroup"
      role="group"
    >
      <div
        class="emotion-1 emotion-2 emotion-10 bb-Box bb-DropdownMenuGroupTitle"
        id="id-test"
      >
        Links
      </div>
      <div
        class="emotion-15 emotion-1 emotion-2 bb-Box bb-DropdownMenuItem"
        id="test-5"
        role="menuitem"
        tabindex="-1"
      >
        Test
      </div>
    </div>
  </div>
</div>
`;

exports[`theming DropdownMenu.Button.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default,#000000);
  border-radius: 6px;
  box-shadow: 0 1px 3px 0px rgba(0,0,0,0.05);
  color: var(--bb-palette-defaultInverted,#000000);
  fill: var(--bb-palette-defaultInverted,#000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900,#000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200,#000000) 0px 0px 0px 1px, var(--bb-palette-gray100,#000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800,#000000);
}

.emotion-3 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-7 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-8 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-4 emotion-1 emotion-2 emotion-7 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-0 emotion-1 emotion-2 emotion-3 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`theming DropdownMenu.Divider.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default,#000000);
  border-radius: 6px;
  box-shadow: 0 1px 3px 0px rgba(0,0,0,0.05);
  color: var(--bb-palette-defaultInverted,#000000);
  fill: var(--bb-palette-defaultInverted,#000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900,#000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200,#000000) 0px 0px 0px 1px, var(--bb-palette-gray100,#000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800,#000000);
}

.emotion-3 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-7 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-4 emotion-1 emotion-2 emotion-7 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-0 emotion-1 emotion-2 emotion-3 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`theming DropdownMenu.Group.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default,#000000);
  border-radius: 6px;
  box-shadow: 0 1px 3px 0px rgba(0,0,0,0.05);
  color: var(--bb-palette-defaultInverted,#000000);
  fill: var(--bb-palette-defaultInverted,#000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900,#000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200,#000000) 0px 0px 0px 1px, var(--bb-palette-gray100,#000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800,#000000);
}

.emotion-3 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-7 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-4 emotion-1 emotion-2 emotion-7 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-0 emotion-1 emotion-2 emotion-3 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`theming DropdownMenu.Item.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default,#000000);
  border-radius: 6px;
  box-shadow: 0 1px 3px 0px rgba(0,0,0,0.05);
  color: var(--bb-palette-defaultInverted,#000000);
  fill: var(--bb-palette-defaultInverted,#000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900,#000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200,#000000) 0px 0px 0px 1px, var(--bb-palette-gray100,#000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800,#000000);
}

.emotion-3 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-7 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-4 emotion-1 emotion-2 emotion-7 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-0 emotion-1 emotion-2 emotion-3 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`theming DropdownMenu.Popover.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default,#000000);
  border-radius: 6px;
  box-shadow: 0 1px 3px 0px rgba(0,0,0,0.05);
  color: var(--bb-palette-defaultInverted,#000000);
  fill: var(--bb-palette-defaultInverted,#000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900,#000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200,#000000) 0px 0px 0px 1px, var(--bb-palette-gray100,#000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800,#000000);
}

.emotion-3 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-7 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-4 emotion-1 emotion-2 emotion-7 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-0 emotion-1 emotion-2 emotion-3 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`theming DropdownMenu.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default,#000000);
  border-radius: 6px;
  box-shadow: 0 1px 3px 0px rgba(0,0,0,0.05);
  color: var(--bb-palette-defaultInverted,#000000);
  fill: var(--bb-palette-defaultInverted,#000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900,#000000);
}

.emotion-4[disabled],
.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-4:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200,#000000) 0px 0px 0px 1px, var(--bb-palette-gray100,#000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-4:hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-4:hover:active {
  background-color: var(--bb-palette-white800,#000000);
}

.emotion-3 {
  margin-left: 0.5em;
  margin-right: -0.25em;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-8 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-8 emotion-1 emotion-2 bb-Box bb-DropdownMenu"
>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-4 emotion-1 emotion-2 emotion-7 bb-Box bb-DropdownMenuButton bb-Button"
    type="button"
  >
    Actions
    <svg
      aria-hidden="true"
      class="emotion-0 emotion-1 emotion-2 emotion-3 bb-ButtonIcon bb-Box bb-Icon"
      role="img"
      viewBox="0 0 448 512"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;
